# elpee

./: .gitignore  AllStackStarter.py  AlternateSolver.py  DualSimplexSolver.py  FeasibleHandler.py  LICENSE  LPProblem.py  NOTICE  README.md  SimplexPrinter.py  all_stack_start.py  alternate_solutions.py  bigM_handler.py  dual_simplex.py  main.py  print_simplex.py  pyproject.toml  requirements.txt  tests.py  testsV1.py  utilities.py
all-stack/: all_stack_start.py  main.py
all_stack/: dual_simplex.py
components/: print_simplex.py
docs/source/: alternator.rst  api.rst  conf.py  configs.rst  data_handler.rst  elpee_solver.rst  index.rst  install.rst  json.rst  linear_problem.rst  standard_problem.rst  usage.rst  usage_alternates.rst  usage_basic.rst  usage_business.rst  yaml.rst
elpee/: __init__.py  alternator.py  configs.yaml  elpee_solver.py
elpee/algorithms/: AllStackStarter.py  AlternateSolver.py  DualSimplexSolver.py  __init__.py  all_stack_starter.py  alternator.py  bigM_handler.py  big_m.py  dual_simplex.py  gen_solver.py
elpee/datahandler/: __init__.py  data_handler.py  json_handler.py  yaml_handler.py
elpee/utils/: FeasibleHandler.py  SimplexPrinter.py  configs.py  configs.yaml  feasible.py  printer.py  utilities.py
elpee/utils/protocols/: handler.py  lp_problem.py  st_problem.py
elpeeV1/: all_stack_start.py  alternate_solutions.py  print_simplex.py  utilities.py
tests/: test_elpee.py
